<resources>

    <string name="app_name">RunnersHigh</string>

    <string name="navi_run">Run</string>
    <string name="navi_graph">Graph</string>
    <string name="navi_Profile">Profile</string>

    <string name="facebook_application_id" translatable="false">1532495356921211</string>
    <string name="facebook_login_protocol_scheme" translatable="false">1532495356921211</string>
    <string name="twitter_consumer_key" translatable="false">xZIjBdSGoYDXveTBkuEGtHSPt</string>
    <string name="twitter_consumer_secret" translatable="false">19gmqmhu5Y4itMIku4Gg4zxJNzqtB7WmrPQlM3LwBar0eFjQZN</string>

    <!-- run_fragment   -->
    <string name="start_button">START</string>
    <string name="restart_button">AGAIN</string>
    <string name="pause_button">PAUSE</string>
    <string name="finish_button">FINISH</string>

    <string name="timer">0：00：00</string>
    <string name="distance">0.00</string>
    <string name="ditance_unit">km</string>
    <string name="calorie">0.00</string>
    <string name="calorie_unit">kcal</string>

    <string name="gps_search">Search for GPS</string>
    <string name="startNav">Tap under button</string>
    <string name="startNav2">and run</string>
    <string name="objective">目標</string>
    <string name="objective_sample">未登録</string>

    <string name="count_down5">5</string>
    <string name="count_down4">4</string>
    <string name="count_down3">3</string>
    <string name="count_down2">2</string>
    <string name="count_down1">1</string>

    <string name="start_description">start running</string>
    <string name="pause_description">pause running</string>
    <string name="restart_descrption">restart running</string>
    <string name="finish_description">finish running</string>

    <string name="lock">lock</string>

    <!--  result_fragment  -->
    <string name="result_title">Nice Run</string>
    <string name="result_time">Time</string>
    <string name="total_time">0:00:00</string>
    <string name="result_distance">Distance</string>
    <string name="total_distance">0.000km</string>
    <string name="result_calorie">Calorie</string>
    <string name="total_calorie">0kcal</string>
    <string name="result_memo">気づき・メモ</string>
    <string name="resutl_finish">result_finish</string>
    <string name="today">yymmdd</string>
    <string name="result_camera">cameraSet</string>
    <string name="feedBack">feed_back</string>
    <string name="imageSet">imageSet</string>
    <string name="weatherSet">weatherSet</string>
    <string name="checkFab">checkFab</string>
    <string name="weatherSelect">weatherSelect</string>

    <string name="S">S</string>
    <string name="e">e</string>
    <string name="a">a</string>
    <string name="r">r</string>
    <string name="c">c</string>
    <string name="h">h</string>
    <string name="F">F</string>
    <string name="o">o</string>
    <string name="r2">r</string>
    <string name="G">G</string>
    <string name="P">P</string>
    <string name="S2">S</string>

    <string name="perfectText">最高</string>
    <string name="goodText">良い感じ</string>
    <string name="sosoText">まずまず</string>
    <string name="badText">微妙</string>
    <string name="tooBadText">全然走れなかった</string>

    <string name="color">color</string>

    <string name="memo">気づき・メモ</string>

    <string name="heigh_title">走行距離の記録</string>
    <string name="calorie_title">消費カロリーの記録</string>

    <string name="profile_name">ユーザー</string>
    <string name="profile_name2">太郎</string>
    <string name="login_day_text">ログイン日</string>
    <string name="login_day">非ログイン</string>

    <string name="profile_distance_level">距離レベル</string>
    <string name="profile_level_num">Lv.0</string>
    <string name="profile_distance_num_metaphor_0">ここから積み上げていくぞー！</string>
    <string name="profile_distance_num_metaphor_1"></string>
    <string name="profile_distance_num_metaphor_2"></string>
    <string name="profile_distance_num_metaphor_3"></string>
    <string name="profile_distance_num_metaphor_4"></string>
    <string name="profile_distance_num_metaphor_5">縦にすると酸素が地上の大体半分になるくらいな距離</string>
    <string name="profile_distance_num_metaphor_10">縦にするとエベレスト越えちゃうくらいな距離</string>
    <string name="profile_distance_num_metaphor_20"></string>
    <string name="profile_distance_num_metaphor_30"></string>
    <string name="profile_distance_num_metaphor_40"></string>
    <string name="profile_distance_num_metaphor_50"></string>
    <string name="profile_distance_num_metaphor_100">縦にすると宇宙突入するくらいな距離</string>
    <string name="profile_distance_num_metaphor_200"></string>
    <string name="profile_distance_num_metaphor_300"></string>
    <string name="profile_distance_metaphor_400">縦にするとはやぶさに届くくらいな</string>
    <string name="profile_distance_metaphor_500">東京から大阪まで走っちゃった</string>
    <string name="profile_distance_metaphor_600"></string>
    <string name="profile_distance_metaphor_700"></string>
    <string name="profile_distance_metaphor_850">東京から札幌まで走っちゃう</string>
    <string name="profile_distance_metaphor_900"></string>
    <string name="profile_distance_metaphor_2000">東京から北京まで走れる</string>
    <string name="profile_distance_metaphor_12000">日本一周！！！！</string>
    <string name="profile_distance_metaphor_1000"></string>


    <string name="profile_calorie_level">消費カロリーレベル</string>
    <string name="profile_calorie_level_num">Lv.0</string>
    <string name="profile_calorie_metaphor_1">ここから積み上げるぞー</string>
    <string name="profile_calorie_metaphor_160">おにぎり一個分</string>
    <string name="profile_calorie_metaphor_2"></string>
    <string name="profile_calorie_metaphor_3">ビックマック並</string>
    <string name="profile_calorie_metaphor_4">ショートケーキ並</string>
    <string name="profile_calorie_metaphor_5"></string>
    <string name="profile_calorie_metaphor_6"></string>
    <string name="profile_calorie_metaphor_7"></string>
    <string name="profile_calorie_metaphor_8"></string>
    <string name="profile_calorie_metaphor_9"></string>
    <string name="profile_calorie_metaphor_10">カツカレー</string>
    <string name="profile_calorie_metaphor_20">某ましましラーメン並</string>
    <string name="profile_calorie_metaphor_"></string>
    <string name="profile_calorie_metaphor_48">おにぎり300個分</string>
    <string name="profile_calorie_metaphor_50"></string>
    <string name="profile_calorie_metaphor_72">脂肪1キロ君</string>
    <string name="profile_calorie_metaphor_720">脂肪10キロ君</string>


    <string name="profile">profile</string>
    <string name="profile_photo">写真を変更</string>
    <string name="profile_family_name">姓</string>
    <string name="profile_first_name">名</string>
    <string name="profile_weight">体重(kg)</string>
    <string name="weight_num">60kg</string>
    <string name="profile_marker">マーカー</string>
    <string name="profile_delete">データを削除する</string>
    <string name="profile_marker_image">ランニング中のマーカーの画像を指定</string>


</resources>

