<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="設定"
        app:titleTextColor="@color/normal2"
        app:titleMarginStart="100dp"
        android:background="@color/white"/>

    <ImageView
        android:id="@+id/profile_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/profile" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/wall_white"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintBottom_toTopOf="@id/title_family_name"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile__image_default"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_account"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/title_family_name"
        app:layout_constraintBottom_toTopOf="@id/title_objective"/>

    <TextView
        android:id="@+id/title_family_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_family_name"
        android:textColor="@color/normal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintStart_toEndOf="@id/profile__image_default"/>

    <EditText
        android:id="@+id/edit_family_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_family_name"
        android:textColor="@color/normal"
        android:theme="@style/EditTextColorControl"
        android:autofillHints="名前"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_family_name"
        app:layout_constraintStart_toStartOf="@id/title_family_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_first_name"
        android:textColor="@color/normal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_family_name"
        app:layout_constraintStart_toEndOf="@id/profile__image_default"/>

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/normal"
        android:theme="@style/EditTextColorControl"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_first_name"
        app:layout_constraintStart_toStartOf="@id/title_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/title_objective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objective"
        android:textColor="@color/normal"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_first_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_objective"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/normal"
        android:theme="@style/EditTextColorControl"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_objective"
        app:layout_constraintStart_toStartOf="@id/title_objective"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/title_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_weight"
        android:textColor="@color/normal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_objective"
        app:layout_constraintStart_toStartOf="@id/edit_objective"/>

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:theme="@style/EditTextColorControl"
        app:layout_constraintTop_toBottomOf="@id/title_weight"
        app:layout_constraintStart_toStartOf="@id/title_weight"
        app:layout_constraintEnd_toEndOf="@id/title_weight"
        android:autofillHints="" />
    
    <TextView
        android:id="@+id/title_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_marker"
        android:textColor="@color/normal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_weight"
        app:layout_constraintStart_toStartOf="@id/edit_weight" />

    <ImageView
        android:id="@+id/marker_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trace"
        android:layout_marginTop="12dp"
        android:paddingBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/title_marker"
        app:layout_constraintStart_toStartOf="@id/title_marker"
        android:contentDescription="@string/profile_marker_image"/>

    <View
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/wall_white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/marker_image"
        app:layout_constraintBottom_toTopOf="@id/delete_text"/>

    <TextView
        android:id="@+id/delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tooBad"
        android:text="@string/profile_delete"
        android:textSize="15sp"
        android:layout_marginTop="12dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="@id/border2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@id/delete_text"
        android:background="@color/wall_white"/>

</androidx.constraintlayout.widget.ConstraintLayout>