<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.reo.running.runnershigh.fragments.run.RunViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/run_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <!-- timer -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timer_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cameraImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/result_camera"
                android:src="@drawable/ic_camera2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cameraSet"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/result_camera"
                app:layout_constraintEnd_toEndOf="@id/cameraImage"
                app:layout_constraintStart_toStartOf="@id/cameraImage"
                app:layout_constraintTop_toBottomOf="@id/cameraImage" />

            <Chronometer
                android:id="@+id/stop_watch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{viewModel.stopWatchText}"
                android:textColor="#00B8D4"
                android:textSize="70sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--   distance     -->
            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="111dp"
                android:text="@{viewModel.roundedTotalMileage.toString()}"
                android:textColor="#00B8D4"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/distance_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="120dp"
                android:text="@string/ditance_unit"
                android:textColor="#00B8D4"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@id/distance"
                app:layout_constraintTop_toTopOf="parent" />

            <!--    calorie    -->
            <TextView
                android:id="@+id/calorie_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="111dp"
                android:layout_marginEnd="90dp"
                android:text="@{viewModel.totalConsumptionCalorieText}"
                android:textColor="#00B8D4"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calorie_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="120dp"
                android:text="@string/calorie_unit"
                android:textColor="#00B8D4"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@id/calorie_num"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- startButton   -->
        <TextView
            android:id="@+id/startText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="152dp"
            android:alpha="0.9"
            android:contentDescription="@string/start_description"
            android:elevation="8dp"
            android:fontFamily="@font/baloo"
            android:text="@string/start_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:alpha="0.7"
            android:contentDescription="@string/start_description"
            android:elevation="4dp"
            android:visibility="visible"
            app:backgroundTint="@color/teal_200"
            app:fabCustomSize="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--    pauseButton  -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/start_description"
            android:elevation="0dp"
            android:src="@drawable/ic_stop"
            android:visibility="gone"
            app:backgroundTint="@color/teal_200"
            app:fabCustomSize="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:maxImageSize="52dp"
            app:tint="@color/white" />


        <!-- restartButton   -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/restartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/restart_descrption"
            android:src="@drawable/ic_start"
            android:visibility="gone"
            app:backgroundTint="@color/teal_200"
            app:fabCustomSize="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:maxImageSize="52dp"
            app:tint="@color/white" />


        <!-- finishButton   -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/finish_description"
            android:src="@drawable/ic_check"
            android:visibility="gone"
            app:backgroundTint="#f44336"
            app:fabCustomSize="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="52dp"
            app:tint="@color/white" />

        <!--countDownNum-->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/countNum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:elevation="8dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/count_down3"
            android:textColor="@color/white"
            android:textSize="0.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/countNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:elevation="8dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/count_down2"
            android:textColor="@color/white"
            android:textSize="0.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/countNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:elevation="8dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/count_down1"
            android:textColor="@color/white"
            android:textSize="0.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Let's run!!  -->
        <TextView
            android:id="@+id/startNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp"
            android:alpha="0.6"
            android:elevation="10dp"
            android:fontFamily="@font/baloo"
            android:text="@string/startNav"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startNav2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="300dp"
            android:alpha="0.6"
            android:elevation="10dp"
            android:fontFamily="@font/baloo"
            android:text="@string/startNav2"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startNav" />


        <ImageView
            android:id="@+id/lockImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/lock"
            android:src="@drawable/ic_lock"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/lockOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/lock"
            android:src="@drawable/ic_open"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>